﻿Pull all data from Azure
Generate picklist
Safe button will close connection
Table viewer renders data in a clean table
Keybinds [on main (S) closes connection]