@@ -9,10 +9,13 @@ namespace ServerEye
     /// </summary>
     public partial class TableDisplay : Window
     {
+        private LogManager logManager;
+
         public TableDisplay(DataTable table)
         {
             InitializeComponent();
             display.DataContext = table;
+            logManager.Log("Table displayed");
         }
 
         private void bind_KeyPress(object sender, KeyEventArgs e)
@@ -26,11 +29,6 @@ namespace ServerEye
                     this.WindowState = WindowState.Minimized;
                     break; 
             }
-        }
-
-        private void Export()
-        {
-            
         }
     }
 }
