@@ -3,3 +3,6 @@ Generate picklist
 Safe button will close connection
 Table viewer renders data in a clean table
 Keybinds [on main (S) closes connection]
+Crash prevention (if connection fails, it will not crash the program)
+Error handling (all errors are handled and displayed to the user as well as logged to a file. Log files located in "/logs")
+Added Amory FIRST and Second picks
